<resources>
    <string name="app_name">Jobify</string>
    <string name="facebook_app_id">1749832371922776</string>

    #Main Activity:
    <string name="boton_conectar">Conectar</string>
    <string name="boton_login">Login FB</string>
    <string name="tview_respuesta">A la espera...</string>
    <string name="tview_mensaje">Ingrese una URL.</string>

    #Login Activity:
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="user_id">User ID:</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    #AGREGADO PARA LAS CARD VIEW Y LIST DE RELACIONES, PRUEBA
        <string name="action_settings">Settings</string>
        <string name="item_title">Lionel Messi</string>
    <string name="item_desc">Futbolista argentino que juega para el Barcelona.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
        <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    ######################


</resources>
