<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.clientapp.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_conectar"
        android:onClick="apretarBotonConectar"
        android:background="#196"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/editTextUrl"
        android:layout_alignLeft="@+id/textViewMensaje"
        android:layout_alignStart="@+id/textViewMensaje" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_login"
        android:onClick="apretarBotonLogin"
        android:background="#6495ED"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/textViewRespuesta"
        android:layout_alignRight="@+id/textViewMensaje"
        android:layout_alignEnd="@+id/textViewMensaje" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/tview_respuesta"
        android:textSize="20dp"
        android:textColor="#196"
        android:id="@+id/textViewRespuesta"
        android:textIsSelectable="false"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tview_mensaje"
        android:textSize="30dp"
        android:textColor="#1976D2"
        android:id="@+id/textViewMensaje"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUrl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp" />

</RelativeLayout>