<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#196"
        android:layout_above="@+id/tvApellido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        android:textSize="20dp"
        android:textColor="#196"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:textColor="#196"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvApellido"
        android:textSize="20dp"
        android:textColor="#1976D2"
        android:layout_below="@+id/tvNombre"
        android:layout_alignLeft="@+id/tvNombre"
        android:layout_alignStart="@+id/tvNombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:textColor="#1976D2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvToken"
        android:textSize="20dp"
        android:textColor="#1976D2"
        android:layout_below="@+id/tvApellido"
        android:layout_alignLeft="@+id/tvApellido"
        android:layout_alignStart="@+id/tvApellido" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
